--- a/src/Components/Header/Stylesheet.css
+++ b/src/Components/Header/Stylesheet.css
@@ -240,8 +240,15 @@ h2.list-heading {
     font-weight: 600;
 }
 
-
-
+.service_card img {
+    width: 64px;
+}
+.Service_block .row {
+    justify-content: center;
+}
+.Insurance.service_card {
+    margin-top: 30px;
+}
 
 /* Guest Section */
 
