--- a/src/Components/Header/Stylesheet.css
+++ b/src/Components/Header/Stylesheet.css
@@ -3,6 +3,12 @@
     display: flex;
     align-items: center;
 }
+.Discovery_card.Explore {
+    background-color: #F8C000;
+}
+#e {
+    color: black;
+}
 .background-image-div .row {
     flex-direction: column;
     height: 100%;
@@ -101,6 +107,7 @@ img.explore_img {
     position: relative;
     gap: 10px;
     align-items: center;
+    background-color: white;
 }
 span.Tag_number {
     position: absolute;
