--- a/src/Components/Header/Banner.css
+++ b/src/Components/Header/Banner.css
@@ -1,10 +1,10 @@
 .background-image-div {
-    background-color: green !important;
-    background-image: url(/src/Images/banner.png);
+    /* background-color: green !important; */
+    /* background-image: url(/src/Images/banner.png); */
     top: -100px;
     width: 100%;
     z-index: -1;
-    height: 500px;
+    /* height: 500px; */
     background-size: cover;
     text-align: center;
     font-family: poppins;
