--- a/src/Components/Header/Styles/Header.css
+++ b/src/Components/Header/Styles/Header.css
@@ -10,19 +10,26 @@
     justify-content: center;
     gap: 25px;
 }
-p{
+.menu_list p{
     font-size: 18px;
     cursor: pointer;
 }
 .Header {
-    color: white;
-    position: absolute;
+    color: rgb(255, 255, 255);
+    background-color: #277dffde;
     width: 100%;
     top: 0px;
     z-index: 1;
 }
-.Header .row{
-    justify-content: space-around;
+.Header.fixed {
+    top: 0px;
+    z-index: 99999 !important;
+    position: fixed;
+    width: 100%;
+   
+}
+.Header .row {
+    justify-content: space-between;
 }
 .container{
     max-width:1140px;
